Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28742

[REG 9.0.1 -> 10.0] Crash when right-clicking qml editor

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • Qt Creator 10.0.0
    • Qt Creator 10.0.0-beta1
    • Quick / QML Support
    • Ubuntu 20.04 LTS
      Creator built from 10.0 branch on self-built Qt 6.4.2
    • 541aafecb (10.0)

    Description

      1. Create a new Qt Quick Application project using the wizard's default.
        In case it matters, this used my self-build Qt 6.4.2 in PATH.
        Creator will show Main.qml
      2. Right-click into the editor.
        Creator crashes.

      Creator built from the current 9.0 branch does not crash in this situation.

      Found and tested by Squish test tst_qml_editor.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-28742
        # Subject Branch Project Status CR V

        Activity

          People

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes