src/plugins/qmljseditor/qmljsquickfix.h
@@ -7,6 +7,7 @@
 #include <qmljs/parser/qmljsastfwd_p.h>
 #include <qmljs/qmljsdocument.h>
 #include <qmljstools/qmljsrefactoringchanges.h>
+#include <qmljstools/qmljssemanticinfo.h>
 
 #include <QSharedPointer>
 
@@ -14,7 +15,6 @@ namespace QmlJSEditor {
 
 namespace Internal { class QmlJSQuickFixAssistInterface; }
 
-using QmlJSQuickFixInterface = QSharedPointer<const Internal::QmlJSQuickFixAssistInterface>;
 using TextEditor::QuickFixOperation;
 using TextEditor::QuickFixOperations;
 using TextEditor::QuickFixInterface;
@@ -31,7 +31,8 @@ public:
         \param interface The interface on which the operation is performed.
         \param priority The priority for this operation.
      */
-    explicit QmlJSQuickFixOperation(const QmlJSQuickFixInterface &interface, int priority = -1);
+    explicit QmlJSQuickFixOperation(const Internal::QmlJSQuickFixAssistInterface *interface,
+                                    int priority = -1);
 
     void perform() override;
 
@@ -41,13 +42,13 @@ protected:
     virtual void performChanges(QmlJSTools::QmlJSRefactoringFilePtr currentFile,
                                 const QmlJSTools::QmlJSRefactoringChanges &refactoring) = 0;
 
-    const Internal::QmlJSQuickFixAssistInterface *assistInterface() const;
+    const QmlJSTools::SemanticInfo &semanticInfo() const;
 
     /// \returns The name of the file for for which this operation is invoked.
     Utils::FilePath fileName() const;
 
 private:
-    QmlJSQuickFixInterface m_interface;
+    const QmlJSTools::SemanticInfo m_semanticInfo;
 };
 
 TextEditor::QuickFixOperations findQmlJSQuickFixes(const TextEditor::AssistInterface *interface);
